# libmpsse

./: Makefile  Makefile.in  configure  i2ctest.c  mpsse.c  mpsse.h  mpsse.i  spitest.c  spitest.py  support.c  support.h
docs/: API  INSTALL  README  README.API  README.API_C  README.API_PYTHON  README.C  README.GPIO  README.I2C  README.PYTHON  README.SPI
src/: Makefile.in  configure  configure.ac  fast.c  functions.h  main.py  mpsse.c  mpsse.h  mpsse.py  support.c  support.h  swig.h
src/examples/: Makefile.in  at93c46d.py  bitbang.c  ds1305.c  ds1305.py  flashdump.py  gpio.c  gpio.py  i2ceeprom.c  i2ceeprom.py  i2ctest.c  spiflash.c  spiflash.py  spitest.c  spitest.py
